# deeplearning

./: .gitignore  README.md  pyproject.toml
deeplearning/data/: dataloader.py  dataset.py
deeplearning/net/: net1.py  net2.py
deeplearning/train/: train.py
ipynb/: test.ipynb
test/: test1.py
